--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 <body>
     <header>
         <div class="brand">
-            <img src="Skool Union.png" alt="Skool Union logo" class="logo">
+            <img src=""C:\Users\Documents\Skoolai\Skool Union.jpg" alt="Skool Union logo" class="logo">
             <h4>SkoolAI</h4>
         </div>
         <button style="background-color: blue;" class="top-btn">Join the waitlist</button>
@@ -1100,3 +1100,4 @@ function updateFeatureCardLayout() {
     </script>
 </body>
 </html>
+
