--- a/index.html
+++ b/index.html
@@ -870,12 +870,67 @@
         text-align: center;
     }
 }
+/* Replace your existing footer styles with these */
+footer {
+    position: relative;
+    width: 100%;
+    min-height: 400px; /* Adjust based on your image's aspect ratio – test with 300px–600px */
+    background: #000000 url('Footer mobile.jpg') center center / cover no-repeat; /* Dark base + your image as background */
+    color: #ffffff;
+    padding: 80px 24px 40px;
+    text-align: center;
+    overflow: hidden;
+    margin-top: 80px; /* Space above footer */
+}
+
+/* Semi-transparent overlay for better readability if image has light areas */
+footer::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0, 0, 0, 0.4); /* Adjust opacity (0.3–0.6) as needed */
+    z-index: 1;
+}
+
+/* Style any content inside footer (e.g., if you add text later) */
+footer > * {
+    position: relative;
+    z-index: 2;
+}
+
+/* Fallback foreground image (visible on very small screens or if background fails) */
+.footer-fallback-img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    min-height: 300px;
+}
+
+/* On larger screens, hide fallback img and rely on background */
+@media (min-width: 769px) {
+    .footer-fallback-img {
+        display: none;
+    }
+    footer {
+        min-height: 500px; /* Taller on desktop for better look */
+    }
+}
+
+/* On very small screens, ensure it doesn't get too short */
+@media (max-width: 480px) {
+    footer {
+        min-height: 300px;
+        padding: 60px 16px 30px;
+    }
+}
+
     </style>
 </head>
 <body>
     <header>
         <div class="brand">
-            <img src=""C:\Users\Documents\Skoolai\Skool Union.jpg" alt="Skool Union logo" class="logo">
+            <img src="Skool Union.png" alt="Skool Union logo" class="logo">
             <h4>SkoolAI</h4>
         </div>
         <button style="background-color: blue;" class="top-btn">Join the waitlist</button>
@@ -983,8 +1038,20 @@
     </div>
 
     <footer>
-        <center><img src="Footer mobile.jpg" alt="Footer image" style="max-width: 100%; width: 100%;"></center> 
-    </footer>
+    <!-- Optional: Keep a foreground img for mobile/small screens if background doesn't render well -->
+    <img src="Footer mobile.jpg" alt="Footer" class="footer-fallback-img">
+    
+    <!-- If you want to add real text links/copyright below the image, uncomment this:
+    <div class="footer-content">
+        <p>&copy; 2025 SkoolAI. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact</a>
+        </div>
+    </div>
+    -->
+</footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -1100,4 +1167,3 @@ function updateFeatureCardLayout() {
     </script>
 </body>
 </html>
-
