--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ footer {
     position: relative;
     width: 100%;
     min-height: 400px; /* Adjust based on your image's aspect ratio – test with 300px–600px */
-    background: #000000 url('Footer mobile.jpg') center center / cover no-repeat; /* Dark base + your image as background */
+    background: #000000 url('') center center / cover no-repeat; /* Dark base + your image as background */
     color: #ffffff;
     padding: 80px 24px 40px;
     text-align: center;
@@ -1117,5 +1117,6 @@ function updateFeatureCardLayout() {
     </script>
 </body>
 </html>
+
 
 
