--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@ footer > * {
 
 
   <footer class="image-footer">
-    <img src="footer mobile.jpg" alt="SkoolAI footer">
+    <img src="Footer mobile.jpg" alt="SkoolAI footer">
 </footer>
 
 
@@ -1417,3 +1417,4 @@ function updateFeatureCardLayout() {
 
 </body>
 </html>
+
