--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
 
 
  <footer class="footer">
-    <img src="footer mobile.jpg" alt="SkoolAI footer">
+    <img src="Footer mobile.jpg" alt="SkoolAI footer">
 </footer>
 
 
@@ -1345,3 +1345,4 @@ function updateFeatureCardLayout() {
 
 </body>
 </html>
+
